solution to the test main problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,13 @@ project(ChaosCore)
 set( CORE_SRC
 
     src/cxx/chaoscore/base/string/UTF8String.cpp
+    src/cxx/chaoscore/test/ChaosTest.cpp
 )
 
 set( TEST_SRC
 
-    tests/cxx/TestLaunchPad.cpp
     tests/cxx/test_suites/base/PreProc_TestSuite.cpp
+    tests/cxx/test_suites/base/str/UTF8String_TestSuite.cpp
 )
 
 set( DEV_SRC
@@ -27,8 +28,8 @@ include_directories("${BASEPATH}" ${INCLUDE_DIRECTORIES} src/cxx/ tests/cxx/ )
 
 link_directories(${LINK_DIRECTORIES})
 
-add_executable( dev_binary ${DEV_SRC} ${CORE_SRC})
-target_link_libraries( dev_binary )
+#add_executable( dev_binary ${DEV_SRC} ${CORE_SRC})
+#target_link_libraries( dev_binary )
 
 add_executable( tests ${TEST_SRC} ${CORE_SRC})
 target_link_libraries( tests )
