file system exists tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set( TEST_SRC
     tests/cxx/base/uni/UTF8String_TestSuite.cpp
     tests/cxx/base/uni/UnicodeOperations_TestSuite.cpp
 
+    tests/cxx/io/sys/FileSystemOperations_TestSuite.cpp
     tests/cxx/io/sys/Path_TestSuite.cpp
 )
 
