--- a/ChaosCore.vcxproj.filters
+++ b/ChaosCore.vcxproj.filters
@@ -1,13 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src/cxx/chaoscore/test/ChaosTest.cpp" />
-    <ClCompile Include="src/cxx/chaoscore/test/ChaosTestMain.cpp" />
-    <ClCompile Include="src/cxx/chaoscore/test/TestLogger.cpp" />
-    <ClCompile Include="src/cxx/chaoscore/test/log_formatter/AbstractTestLogFormatter.cpp" />
-    <ClCompile Include="src/cxx/chaoscore/test/log_formatter/HTMLTestLogFormatter.cpp" />
-    <ClCompile Include="src/cxx/chaoscore/test/log_formatter/PlainTestLogFormatter.cpp" />
-    <ClCompile Include="src/cxx/chaoscore/test/log_formatter/PrettyTestLogFormatter.cpp" />
-    <ClCompile Include="src/cxx/chaoscore/test/log_formatter/XMLTestLogFormatter.cpp" />
+    <ClCompile Include="tests\cxx\TestsMain.cpp" />
+    <ClCompile Include="tests/cxx/base/PreProc_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/base/Types_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/base/data/BitwiseFloat_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/base/data/ByteOperations_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/base/math/MathOperations_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/base/uni/UTF8String_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/base/uni/UnicodeOperations_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/io/format/FormatOperations_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/io/sys/FileSystemOperations_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/io/sys/Path_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/gfx/Vector2_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/gfx/Vector3_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/gfx/Vector4_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/gfx/VectorOperations_TestSuite.cpp" />
   </ItemGroup>
 </Project>
