commit before changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ set(TESTS_SUITES
     tests/cxx/base/uni/UnicodeOperations_TestSuite.cpp
 
     tests/cxx/io/format/FormatOperations_TestSuite.cpp
+    tests/cxx/io/sys/FileHandle_TestSuite.cpp
     tests/cxx/io/sys/FileSystemOperations_TestSuite.cpp
     tests/cxx/io/sys/Path_TestSuite.cpp
 
