exception cleanup, and introspect typename

--- a/ChaosCore.vcxproj
+++ b/ChaosCore.vcxproj
@@ -65,6 +65,7 @@
     <ClCompile Include="tests/cxx/base/Types_TestSuite.cpp" />
     <ClCompile Include="tests/cxx/base/data/BitwiseFloat_TestSuite.cpp" />
     <ClCompile Include="tests/cxx/base/data/ByteOperations_TestSuite.cpp" />
+    <ClCompile Include="tests/cxx/base/introspect/IntrospectOperations_TestSuite.cpp" />
     <ClCompile Include="tests/cxx/base/math/MathOperations_TestSuite.cpp" />
     <ClCompile Include="tests/cxx/base/str/UTF8String_TestSuite.cpp" />
     <ClCompile Include="tests/cxx/base/str/StringOperations_TestSuite.cpp" />
