vector component-wise operators

--- a/ArcaneCore.vcxproj
+++ b/ArcaneCore.vcxproj
@@ -77,6 +77,8 @@
     <ClCompile Include="tests/cpp/graphics_math/Vec2Operations_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/graphics_math/Vec3_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/graphics_math/Vec3Operations_TestSuite.cpp" />
+    <ClCompile Include="tests/cpp/graphics_math/Vec4_TestSuite.cpp" />
+    <ClCompile Include="tests/cpp/graphics_math/Vec4Operations_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/io/format/FormatOperations_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/io/sys/FileHandle_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/io/sys/FileReader_TestSuite.cpp" />
