started work on Simd supported vector

--- a/ArcaneCore.vcxproj
+++ b/ArcaneCore.vcxproj
@@ -70,16 +70,7 @@
     <ClCompile Include="tests/cpp/base/math/MathOperations_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/base/str/UTF8String_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/base/str/StringOperations_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/gfx/Vector2_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/gfx/Vector3_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/gfx/Vector4_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/gfx/VectorOperations_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/graphics_math/Vec2_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/graphics_math/Vec2Operations_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/graphics_math/Vec3_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/graphics_math/Vec3Operations_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/graphics_math/Vec4_TestSuite.cpp" />
-    <ClCompile Include="tests/cpp/graphics_math/Vec4Operations_TestSuite.cpp" />
+    <ClCompile Include="tests/cpp/gm/Vector_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/io/format/FormatOperations_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/io/sys/FileHandle_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/io/sys/FileReader_TestSuite.cpp" />
@@ -199,6 +190,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>C:\Users\David\AppData\Local\Programs\Python\Python36-32\include;C:\Dropbox\Development\ArcaneCore\ArcaneCore\src\cpp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
