--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ set(TESTS_SUITES
     tests/cpp/base/str/StringOperations_TestSuite.cpp
 
     tests/cpp/gm/Vector_TestSuite.cpp
+    tests/cpp/gm/VectorMath_TestSuite.cpp
 
     tests/cpp/io/format/FormatOperations_TestSuite.cpp
     tests/cpp/io/sys/FileHandle_TestSuite.cpp
