--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ set(TESTS_SUITES
     tests/cpp/base/str/UTF8String_TestSuite.cpp
     tests/cpp/base/str/StringOperations_TestSuite.cpp
 
+    tests/cpp/gm/Matrix_TestSuite.cpp
     tests/cpp/gm/Vector_TestSuite.cpp
     tests/cpp/gm/VectorMath_TestSuite.cpp
 
