--- a/ArcaneCore.vcxproj
+++ b/ArcaneCore.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="tests/cpp/base/str/UTF8String_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/base/str/StringOperations_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/gm/Matrix_TestSuite.cpp" />
+    <ClCompile Include="tests/cpp/gm/MatrixMath_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/gm/Vector_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/gm/VectorMath_TestSuite.cpp" />
     <ClCompile Include="tests/cpp/io/format/FormatOperations_TestSuite.cpp" />
